--- a/Primeiro.html
+++ b/Primeiro.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<title>Primeiro (ver 5.6.1.1)</title>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
 	</head>
 	<body>
-		Minha primeria pagina html
+		<h1>Minha primeira página HTML</h1>
+		<p>Este é apenas um parágrafo da Minha <em>primeira</em> página HTML. <br />E esta é a <strong>segunda</strong> linha do parágrafo.</p>
 	</body>
 </html>
