--- a/Listas.html
+++ b/Listas.html
@@ -4,7 +4,7 @@
 		<title>Listas</title>
 		<meta charset="utf-8" />
 	</head>
-	<body>	<-- Aqui tem um comentário -->
+	<body>
 		<h1>
 			Lista não ordenada
 		</h1>
