--- a/Primeiro-estilo.html
+++ b/Primeiro-estilo.html
@@ -5,22 +5,11 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 	</head>
+	
 	<body>
 		<h1 class="link">Meu primeiro estilo CSS</h1>
-		<p>
-			<a href="Listas.html" class="link">
-				[Primeiro link]
-			</a>
-		</p>
-		<p>
-			<a href="Listas.html" id="segundo">
-				[Segundo Link]	
-			</a>
-		</p>
-		<p>
-			<a href="Listas.html" class="link">
-				[Terceiro Link]	
-			</a>
-		</p>
+		<p><a href="Listas.html" class="link">[Primeiro link]</a></p>
+		<p><a href="Listas.html" id="segundo">[Segundo Link]</a></p>
+		<p><a href="Listas.html" class="link">[Terceiro Link]</a></p>
 	</body>
 </html>
