--- a/tipografia.html
+++ b/tipografia.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Tabalhando com formulários</title>
+		<title>Tipografia</title>
 		<meta charset="utf-8" />
+		<link href="https://fonts.googleapis.com/css?family=Cabin|Inconsolata|Nunito|Nunito+Sans|VT323" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 	</head>
-
 	<body>
-		<form action="" method="get">
-			<label for="nome">Nome:</label>
-			<input id="nome" type="text" placeholder="Digite seu nome" name="nome" />
-			<label for="opcao">Você gostou do site?</label>
-			<input type="radio" name="opcao" value="sim" checked="checked" />Sim
-			<input type="radio" name="opcao" value="nao" />Não
-			<label for="linguagem">Você quer aprender mais sobre:</label>
-			<input type="checkbox" name="html" />HTML
-			<input type="checkbox" name="css" />CSS
-			<textarea name="msg"></textarea>
-			<input type="submit" value="Enviar">
-		</form>
+		<h1>Primeiro título da minha página</h1>
+		<p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut pulvinar nulla. Donec ullamcorper lacinia suscipit. Curabitur eu rhoncus felis. Fusce ac ex lacinia, convallis ligula non, posuere nibh. Nulla sodales metus neque, id tincidunt nulla varius eu. Aenean ac facilisis ligula. Sed mollis iaculis auctor. Etiam eu nisi mattis, dictum enim vitae, placerat justo. Fusce tincidunt elit ut nulla ultrices placerat. Aliquam semper, dolor vel accumsan posuere, sem urna.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo urna vitae tortor vestibulum suscipit. Curabitur hendrerit volutpat consequat. Etiam iaculis eros eu tellus malesuada posuere. Aliquam convallis convallis purus.</p>
+		<p>Nulla tincidunt congue turpis, eu feugiat velit ultrices et. Quisque ultricies lacinia est, a faucibus nisl pulvinar non. Vestibulum feugiat hendrerit urna et tempus. Donec et facilisis leo. Maecenas vulputate.</p>
+		<p>Quisque leo sapien, facilisis ac urna vitae, sagittis pellentesque dolor. Proin arcu eros, mattis ac lobortis blandit, fermentum at neque. Ut vitae scelerisque quam. In iaculis tellus tellus, faucibus iaculis.</p>
+		<p>Donec cursus lacinia elementum. Nam elementum ut dui vel fringilla. Vestibulum a ligula placerat, fringilla elit in, imperdiet ex. Maecenas tincidunt augue risus, eu pharetra leo auctor nec. Cras malesuada.</p>
+		<p>Vestibulum vehicula velit id suscipit facilisis. Donec vel lacus nec ligula scelerisque egestas eu in ex. Praesent porta hendrerit varius. Curabitur sit amet placerat justo, eu luctus mauris. Mauris consequat.</p>
 	</body>
 </html>
