--- a/reset.html
+++ b/reset.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>CSS Reset</title>
 		<meta charset="utf-8" />
+		<link rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<header>
