--- a/sitefinal/contato.html
+++ b/sitefinal/contato.html
@@ -29,31 +29,34 @@
 		</div>
 		<div class="linha">
 			<section>
-				<div class="coluna col8">
-					<h2>Sobre mim</h2>
-					<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
-					<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
-					<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
-					<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
-					<h2>Porque trabalho com Web</h2>
-					<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
-					<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
-					<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
+				<div class="coluna col5 sidebar">
+					<h3>Localização</h3>
+					<img src="img/mapa.jpg" alt="" />
+					<ul class="sem-padding sem-marcador">
+						<li>Rua Ladeira Acima, 0000 1111</li>
+						<li>Bairro Perdido</li>
+						<li>Bairro Mar do Norte - UF</li>
+					</ul>
+					<h3>Contato direto</h3>
+					<ul class="sem-padding sem-marcador">
+						<li>Fone: <strong>(00) 9999-9999</strong></li>
+						<li>Email: <strong>contato@bernardi.com</strong></li>
+						<li>Skipe: <strong>login.skipe</strong></li>
+					</ul>
 				</div>
-				<div class="coluna col4 sidebar"><img src="img/formatura.jpg" alt="" />
-					<h3>Formação profissional</h3>
-					<ul>
-						<li>Graduado em algum lugar do universo paralelo</li>
-						<li>Especialização no mar da tranquilidade, Lua</li>
-					</ul>
-					<h3>Áreas de conhecimento</h3>
-					<ul>
-						<li>Área de conhecimento 1</li>
-						<li>Área de conhecimento 2</li>
-						<li>Área de conhecimento 3</li>
-						<li>Área de conhecimento 4</li>
-						<li>Área de conhecimento 5</li>
-					</ul>
+				<div class="coluna col7">
+					<h2>Envie sua mensagem</h2>
+					<form action="">
+						<label for="nome">Seu nome:</label>
+						<input type="type" name="nome" id="nome" />
+						<label for="email">Seu email:</label>
+						<input type="type" name="email" id="email" />
+						<label for="assunto">Assunto:</label>
+						<input type="type" name="assunto" id="assunto" />
+						<label for="mensagem">Mensagem:</label>
+						<textarea name="mensagem" id="mensagem"></textarea>
+						<input type="submit" class="botao" name="enviar" value="Enviar &raquo;" />
+					</form>
 				</div>
 			</section>
 		</div>
@@ -61,11 +64,13 @@
 			<div class="linha">
 				<div class="coluna col7">
 					<section>
-						<h2>Curiosidades</h2>
-						<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
-						<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
-						<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
-						<p>Sed rhoncus porttitor metus tincidunt egestas. Cras a nunc vel massa ornare tempus. Vivamus gravida consequat ipsum, ut consequat magna eleifend ac. Morbi.</p>
+						<h2>Método alternativo de contato</h2>
+						<p>Caso não consiga me contatar por alguns dos meios acima, possívelmente estarei em uma ilha deserta em algum lugar do pacífico. Neste caso há duas possibilidades:</p>
+						<ol>
+							<li>Enviar uma mensagem em uma garrafa</li>
+							<li>Tentar um sinal de fumaça</li>
+						</ol>
+						<p>Mas sinceramente não sei se alguns desses métodos será eficiente, tente por sua conta e risco :D</p>
 					</section>
 				</div>
 				<div class="coluna col5">
