--- a/sitefinal/index.html
+++ b/sitefinal/index.html
@@ -17,7 +17,7 @@
 					<div class="coluna col8">
 						<nav>
 							<ul compact="menu inline sem-marcador">
-								<li><a href="index.html"></a>home</li>
+								<li><a href="index.html">home</a></li>
 								<li><a href="clientes.html">clientes</a></li>
 								<li><a href="servicos.html">serviços</a></li>
 								<li><a href="sobre.html">sobre</a></li>
@@ -29,7 +29,7 @@
 		</div>
 		<div class="linha">
 			<section>
-				<div class="coluna col3">
+				<div class="coluna col3 sidebar">
 					<h3>Clientes satisfeitos</h3>
 					<ul class="sem-marcador sem-padding">
 						<li><a href="">Nome da Empresa 1</a></li>
